tests/negative/redact_unknown_field.glyph
module neg

@redact fields: [emial]
type Account = {
  email: string,
  name: string,
}
